--- a/app/views/layout/template.phtml
+++ b/app/views/layout/template.phtml
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="Enter your description here" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.1.0/yeti/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
+  <title>Title</title>
 </head>
+
 <body>
-    <header class="header">
-        <h2>Header</h2>
-    </header>
-    <main class="main">
-        <?php include_once VIEW . $content_view ?>
-    </main>
+  <?php include_once LAYOUT . 'header.phtml' ?>
+
+  <main class="main">
+    <?php include_once VIEW . $content_view ?>
+  </main>
+
+  <?php include_once LAYOUT . 'footer.phtml' ?>
 </body>
+
 </html>
